fix: hide token type label on mobile

--- a/packages/app/src/components/RewardItem/index.css
+++ b/packages/app/src/components/RewardItem/index.css
@@ -8,6 +8,7 @@
   padding: 5px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  overflow: hidden;
 }
 
 .ERC721 {
